{
    "name": "MainCharacter",
    "maps": [
        {
            "name": "MovementActionMap",
            "id": "a9e7bb4e-2316-449b-818c-3b6209a02d84",
            "actions": [
                {
                    "name": "Moving Around",
                    "type": "Value",
                    "id": "eae3fc89-7396-4d1a-915a-5840df2b8b33",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "998bd07e-939e-46e5-89a1-c2ceda6d5b73",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMap",
                    "type": "Button",
                    "id": "9ba21058-f4d1-4924-ad86-a84a04e54bdb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "KB",
                    "id": "91042922-eefc-438a-8c1a-d2c9d4bd2aae",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2c379332-4ff6-4e35-87ee-1e95f196c5db",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "06525ee3-1ce1-4f96-8b72-17380c1ccf90",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "DPAD",
                    "id": "5f8b6e7e-a5c6-4650-82fe-e2eb965fc3c6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "732cef42-96cf-4dd4-ac22-02cb179ccd38",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e721a202-51ed-494e-bcf3-4d33a6b6e383",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LSTICK",
                    "id": "6f7bbf3d-bc29-49f7-a868-8a0d7eaa71d1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b3a85a54-1e2b-40e5-8910-2e5ac0d41cd5",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "81c544d6-17dc-4cff-b111-7525495dc659",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Around",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e6ffe7c3-846e-4468-b83a-601a7136c74e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72370c56-0e51-4517-aefc-5aca31d4b739",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "580472ee-630f-4acb-bc83-06de9eacfc78",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e8b6d6f-ebe1-45b7-aec8-fefefac4c7f6",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MinimapActionMap",
            "id": "0b372461-4733-4476-8bd7-f112c2620adb",
            "actions": [
                {
                    "name": "RoomSkill",
                    "type": "Button",
                    "id": "b8a96a21-599c-4c38-ae66-9c0b23b08cb2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseMap",
                    "type": "Button",
                    "id": "a3c3a6a0-220b-4009-a00d-2e3687b5bc5d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d89c676-72e5-459e-abc9-5d29fc6ef0a6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RoomSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b77c7d39-ac9c-4514-9c55-b22180970e7f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RoomSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a14ccd9a-f6e0-4345-96a5-ce2daa1653d4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e305f473-8690-4f64-bc62-958df8bb7598",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}